--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,21 +2,17 @@
 agp = "8.3.1"
 androidxRoomCompilerVersion = "2.6.1"
 coilKtCoilVersion = "2.6.0"
-githubUiTiles = "2.1.0"
-googleAccompanistPermissionsVersion = "0.32.0"
 koinAndroidxCompose = "3.5.6"
 kotlin = "1.9.0"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 kotlinxSerializationJson = "1.6.3"
 lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.7.2"
-composeBom = "2023.08.00"
-markdown = "0.7.0"
-material3WindowSizeClass = "1.2.1"
-materialIconsExtended = "1.6.7"
+activityCompose = "1.9.0"
+composeBom = "2024.05.00"
+materialIconsExtendedVersion = "1.6.7"
 mmkvStatic = "1.3.5"
 navigationCompose = "2.7.7"
 okhttp = "4.12.0"
@@ -25,21 +21,17 @@ roomRuntime = "2.6.1"
 roomPaging = "2.6.1"
 squareupRetrofit = "2.11.0"
 
+material3-adaptive = "1.0.0-alpha12"
+material3-adaptive-navigation-suite = "1.0.0-alpha07"
+androidx-window = "1.3.0-beta02"
+
 [libraries]
-accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "googleAccompanistPermissionsVersion" }
-com-google-accompanist-accompanist-permissions2 = { module = "com.google.accompanist:accompanist-permissions", version.ref = "googleAccompanistPermissionsVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
-androidx-material3-window-size = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClass" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-androidx-navigation-navigation-dynamic-features-fragment7 = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigationCompose" }
-androidx-navigation-navigation-ui-ktx25 = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationCompose" }
-androidx-navigation-navigation-fragment-ktx25 = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationCompose" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 androidx-room-room-compiler2 = { module = "androidx.room:room-compiler", version.ref = "androidxRoomCompilerVersion" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomPaging" }
-github-ui-tiles = { module = "com.github.alorma.compose-settings:ui-tiles", version.ref = "githubUiTiles" }
 io-coil-kt-coil2 = { module = "io.coil-kt:coil", version.ref = "coilKtCoilVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -53,13 +45,20 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroidxCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
-markdown = { module = "org.jetbrains:markdown", version.ref = "markdown" }
+material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
 mmkv-static = { module = "com.tencent:mmkv-static", version.ref = "mmkvStatic" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofit" }
+
+androidx-compose-material3-adaptive = { module = "androidx.compose.material3.adaptive:adaptive", version.ref = "material3-adaptive" }
+androidx-compose-material3-adaptive-layout = { module = "androidx.compose.material3.adaptive:adaptive-layout", version.ref = "material3-adaptive" }
+androidx-compose-material3-adaptive-navigation = { module = "androidx.compose.material3.adaptive:adaptive-navigation", version.ref = "material3-adaptive" }
+androidx-compose-material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3-adaptive-navigation-suite" }
+androidx-window-core = { module = "androidx.window:window-core", version.ref = "androidx-window" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
