--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.3.1"
 androidxRoomCompilerVersion = "2.6.1"
 coilKtCoilVersion = "2.6.0"
+converterGson = "2.11.0"
 koinAndroidxCompose = "3.5.6"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -12,10 +13,12 @@ kotlinxSerializationJson = "1.6.3"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.9.0"
 composeBom = "2024.05.00"
+loggingInterceptor = "4.12.0"
 materialIconsExtendedVersion = "1.6.7"
 mmkvStatic = "1.3.5"
 navigationCompose = "2.7.7"
 okhttp = "4.12.0"
+orgJetbrainsKotlinxKotlinxCoroutinesAndroid2 = "1.8.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
 roomPaging = "2.6.1"
@@ -32,6 +35,7 @@ androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx"
 androidx-room-room-compiler2 = { module = "androidx.room:room-compiler", version.ref = "androidxRoomCompilerVersion" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomPaging" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 io-coil-kt-coil2 = { module = "io.coil-kt:coil", version.ref = "coilKtCoilVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -48,10 +52,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroidxCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
 mmkv-static = { module = "com.tencent:mmkv-static", version.ref = "mmkvStatic" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+org-jetbrains-kotlinx-kotlinx-coroutines-android4 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "orgJetbrainsKotlinxKotlinxCoroutinesAndroid2" }
 squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofit" }
 
 androidx-compose-material3-adaptive = { module = "androidx.compose.material3.adaptive:adaptive", version.ref = "material3-adaptive" }
