--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,10 @@
 [versions]
 agp = "8.3.1"
+androidxLifecycleRuntimeKtxVersion = "2.8.0"
 androidxRoomCompilerVersion = "2.6.1"
 coilKtCoilVersion = "2.6.0"
 converterGson = "2.11.0"
+jetbrainsKotlinxCoroutinesCore = "1.8.1"
 koinAndroidxCompose = "3.5.6"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -13,6 +15,7 @@ kotlinxSerializationJson = "1.6.3"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.9.0"
 composeBom = "2024.05.00"
+lifecycleRuntimeKtxVersion = "2.8.0"
 loggingInterceptor = "4.12.0"
 materialIconsExtendedVersion = "1.6.7"
 mmkvStatic = "1.3.5"
@@ -52,12 +55,14 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroidxCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+lifecycle-runtime-ktx-v280 = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycleRuntimeKtxVersion" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
 mmkv-static = { module = "com.tencent:mmkv-static", version.ref = "mmkvStatic" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 org-jetbrains-kotlinx-kotlinx-coroutines-android4 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "orgJetbrainsKotlinxKotlinxCoroutinesAndroid2" }
+org-jetbrains-kotlinx-kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "jetbrainsKotlinxCoroutinesCore" }
 squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofit" }
 
 androidx-compose-material3-adaptive = { module = "androidx.compose.material3.adaptive:adaptive", version.ref = "material3-adaptive" }
